--- a/tests/css/tests.css
+++ b/tests/css/tests.css
@@ -13,16 +13,33 @@ body {
   display: inline-block;
   line-height: 4em;
   margin: 0 1em;
-  color: #999;
+  color: #aaa;
+  transition: color 0.25s;
 }
 
 .test-element .position.positive {
-  color: #333;
-  transition: color 0.5s;
+  color: #222;
 }
 
 .test-toggle {
   position: fixed;
   left: 1em;
   top: 1em;
+}
+
+.viewport-top-offset,
+.viewport-bottom-offset {
+  position: fixed;
+  left: 0;
+  width: 100%;
+  height: 200px;
+  background: rgba(0, 0, 0, 0.4);
+}
+
+.viewport-top-offset {
+  top: 0;
+}
+
+.viewport-bottom-offset {
+  bottom: 0;
 }
