--- a/tests/styles/visual-tests.css
+++ b/tests/styles/visual-tests.css
@@ -9,15 +9,36 @@ body {
   width: 100%;
   height: 200px;
   max-height: 20%;
-  background: rgba(0, 0, 0, 0.4);
+  background: rgba(0, 0, 0, 0.1);
+  z-index: 2;
 }
 
 .viewport-top {
   top: 0;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
 }
 
 .viewport-bottom {
   bottom: 0;
+  border-top: 1px solid rgba(0, 0, 0, 0.3);
+}
+
+.viewport-top .text,
+.viewport-bottom .text {
+  position: absolute;
+  height: 1em;
+  width: 100%;
+  text-align: center;
+  color: rgba(0,0,0,0.5);
+  text-transform: uppercase;
+}
+
+.viewport-top .text {
+  bottom: 0.5em;
+}
+
+.viewport-bottom .text {
+  top: 0.5em;
 }
 
 .viewport-middle {
@@ -25,4 +46,25 @@ body {
   top: 50%;
   width: 100%;
   border-bottom: 1px dashed maroon;
+}
+
+.test-container {
+  position: relative;
+  z-index: 1;
+}
+
+@-webkit-keyframes colourPulse {
+  50% {
+    color: rgba(0,0,0,0.5);
+    background-color: rgba(255, 164, 128, 0.7);
+  }
+}
+
+.test-element {
+  padding: 1em;
+  position: absolute;
+  text-align: center;
+  color: rgba(0,0,0,0.3);
+  background-color: rgba(0,0,0,0.1);
+  -webkit-animation-duration: 0.4s;
 }
