--- a/tests/styles/visual-tests.css
+++ b/tests/styles/visual-tests.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  padding: 0;
 }
 
 .viewport-top,
@@ -60,6 +61,20 @@ body {
   }
 }
 
+@-moz-keyframes colourPulse {
+  50% {
+    color: rgba(0,0,0,0.5);
+    background-color: rgba(255, 164, 128, 0.7);
+  }
+}
+
+@keyframes colourPulse {
+  50% {
+    color: rgba(0,0,0,0.5);
+    background-color: rgba(255, 164, 128, 0.7);
+  }
+}
+
 .test-element {
   padding: 1em;
   position: absolute;
@@ -67,4 +82,6 @@ body {
   color: rgba(0,0,0,0.3);
   background-color: rgba(0,0,0,0.1);
   -webkit-animation-duration: 0.4s;
+  -moz-animation-duration: 0.4s;
+  animation-duration: 0.4s;
 }
