--- a/tests/styles/visual-tests.css
+++ b/tests/styles/visual-tests.css
@@ -3,6 +3,29 @@ body {
   padding: 0;
 }
 
+.loading .loading-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+  background-color: #aaa;
+}
+
+.loading .loading-container .icon {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  width: 110px;
+  height: 110px;
+  background: url('../images/loading.svg') no-repeat center;
+  z-index: 101;
+}
+
 .viewport-top,
 .viewport-bottom {
   position: fixed;
